# presentations

./: .gitignore
a-gentle-introduction-to-haskell/: presentation.org  presentation.tex
a-gentle-introduction-to-haskell/examples/hcat/: CHANGELOG.md  LICENSE  hcat.cabal
a-gentle-introduction-to-haskell/examples/hcat/src/: HCat.hs  PureImpure.hs
adtech/: presentation.org
agile_tech_conference_2017/: .gitignore  Makefile  beamerthemebjeldbak.sty  outline.org  presentation.tex
agile_tech_conference_2017/src/: using_monads.go
building-a-terminal-application-in-haskell/: .gitignore  build.sh  presentation.org  presentation.tex
building-a-terminal-application-in-haskell/examples/hcat/: CHANGELOG.md  README.md  default.nix  hcat.cabal  package.nix  shell-c2n.nix  shell.nix
building-a-terminal-application-in-haskell/examples/hcat/.direnv/: cache-pre344086.568e0bc498e  drv  nix-profile-pre431709.813836d64fa  nix-profile-pre431709.813836d64fa.rc
building-a-terminal-application-in-haskell/examples/hcat/app/: Main.hs
building-a-terminal-application-in-haskell/examples/hcat/src/: HCat.hs  HCatArgs.hs  HCatBasic.hs  HCatNoMetadata.hs  HCatString.hs  HCatText.hs  WordWrapIO.hs
building-a-terminal-application-in-haskell/examples/hcat/test/: HCatSpec.hs  Main.hs
building-a-terminal-application-in-haskell/examples/snippets/: SideEffects.hs  WriteReadFile.hs
career-advice/: careeradvice.org
creating_tech_talks/: presentation.tex
denotional_semantics/: Makefile  presentation.tex
fullstack-ml/: presentation.tex
fullstack-ml/code/: Dockerfile  LICENSE  README.md  polyglots-haskell-workshop.cabal  stack.yaml
fullstack-ml/code/app/: Main.hs
fullstack-ml/code/frontend/: elm.json  index.html
fullstack-ml/code/frontend/elm-stuff/0.19.0/: Elm_Repl.elmi  Elm_Repl.elmo  Main.elmi  Main.elmo
fullstack-ml/code/frontend/src/: Main.elm
fullstack-ml/code/src/: Converter.hs  Viewer.hs
fullstack-ml/code/test/: Spec.hs
golang_monads/: presentation.tex
haskell-console-app/: presentation.org  presentation.tex
haskell-console-app/c/: wordrap.c
haskell-console-app/hcat/: LICENSE  README.md  hcat.cabal
haskell-console-app/hcat/app/: Main.hs
haskell-console-app/hcat/src/: .#App.hs  App.hs  Lib.hs  Zipper.hs
haskell-console-app/hello/: hello.cabal
haskell-console-app/hello/.stack-work/intero/: interoKBnx3k-TEMP.hs  interoh4ZIAj-TEMP.hs  interohD8JA2-TEMP.hs
haskell-console-app/hello/.stack-work/odir/: App.hi  Lib.hi  Main.hi
haskell-console-app/hello/app/: Main.hs
haskell-deep-learning/: notes.org  presentation.tex
haskell-dsl/embedded-calculator/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
haskell-dsl/embedded-calculator/src/: App.hs  Lib.hs
intro-to-erlang/: genserv.erl  hello.beam  hello.erl  notes.org  presentation.tex  sup.erl
intro-to-erlang/auto/: presentation.el
intro-to-erlang/erlangdemo/: LICENSE  README.md
intro-to-erlang/erlangdemo/src/: erlangdemo.app.src  erlangdemo_app.erl  erlangdemo_genserv.erl  erlangdemo_sup.erl
intro-to-fp/: presentation.tex
intro-to-golang/: outline.org  presentation.tex
intro-to-type-level-programming/: .gitignore  notes.org  presentation.org
intro-to-type-level-programming/example/: CHANGELOG.md  LICENSE  default.nix  hscolorthemes.cabal  theme.json
intro-to-type-level-programming/example/src/: BasicTheme.hs  Color.hs  ColorTheme.hs  ColorX11.hs  GADTDemo.hs  HasColorDemo.hs  Theme.hs  ThemeLoader.hs
linux-binary-debugging/examples/fibs-asm/: Makefile  fibs  fibs.s  shell.nix
linux-binary-debugging/examples/fibs-c/: fibs.c  recfibs.c
linux-binary-debugging/examples/fibs-hs/: CallFib.hs  Makefile  NoCallFib.hs  NoCallFib.s  callfib.c  libfibd.s  overlay.c  shell.nix
linux-binary-debugging/examples/minimal-binary/: Makefile  false.c  false.s  min.s  shell.nix
monads_in_erlang/: overview.org  overview.org~
networking-intro/: abstract.org  garbage.jpg~  presentation.org  presentation.tex
networking-intro/auto/: presentation.el
row-go/: Makefile  presentation.tex
row-go/other-lang/c/: id.c
row-go/other-lang/javascript/: id.js
row-go/other-lang/ocaml/: id.ml
row-go/other-lang/python/: id.py
row-go/other-lang/python/.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  id.data.json  id.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
row-go/other-lang/python/.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
row-go/other-lang/python/.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
row-go/other-lang/python/.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
row-go/other-lang/ruby/: id.rb
row-go/other-lang/rust/: id.rs
row-go/src/: Thinger.go  boundedquantification.go  go.mod  lenses  main.go  structdemo.go
row-go/src/stubs/: stubs.go
silly_c_tricks/: outline.org
silly_c_tricks/examples/: Makefile  closure.c  curry.c  index.c
tackling-the-awkward-squad/: presentation.tex
teaching_haskell/: abstract.org  tree.dot
teaching_haskell/samples/: LICENSE  samples.cabal
teaching_haskell/samples/src/: Main.hs
tensorflow/: presentation.tex
tensorflow/examples/src/: convolution.py  fft.py  transpose.py
tensorflow/img/: mult.graffle  tensors.graffle
