name:                polyglots-haskell-workshop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rebeccaskinner/polyglots-haskell-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Rebecca Skinner
maintainer:          rebecca@rebeccaskinner.net
copyright:           2017 Rebecca Skinner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Viewer
                     , Converter
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , network
                     , text
                     , http-types
                     , bytestring
                     , pandoc
                     , blaze-markup
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , polyglots-haskell-workshop
                     , network
  default-language:    Haskell2010

test-suite polyglots-haskell-workshop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , polyglots-haskell-workshop
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson

  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rebeccaskinner/polyglots-haskell-workshop
