name:                hcat
version:             0.1.0.0
synopsis:            A Program Synposis
description:         A Program Description
homepage:            https://github.com/rebeccaskinner/hcat#readme
license:             BSD3
license-file:        LICENSE
author:              Rebecca Skinner
maintainer:          rebecca@rebeccaskinner.net
copyright:           Copyright (c) 2017 Rebecca Skinner; All Rights Reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Lib
                    , App
                    , Zipper
  build-depends:      base >= 4.7 && < 5
                    , mtl
                    , bytestring
                    , text
                    , containers
  default-language:   Haskell2010
  default-extensions: GADTs
                    , OverloadedStrings
                    , LambdaCase
                    , RankNTypes
                    , FlexibleContexts
                    , FlexibleInstances
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeFamilies
                    , BangPatterns
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , MultiParamTypeClasses
                    , DeriveFunctor
                    , GeneralizedNewtypeDeriving
                    , DeriveGeneric

executable hcat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hcat
  default-language:    Haskell2010

test-suite hcat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hcat
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rebeccaskinner/hcat
