name:                samples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rebeccaskinner/samples#readme
license:             BSD3
license-file:        LICENSE
author:              Rebecca Skinner
maintainer:          rebecca@rebeccaskinner.net
copyright:           Copyright (c) 2017 Rebecca Skinner; All Rights Reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable samples
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
